--- a/src/components/Template.css
+++ b/src/components/Template.css
@@ -10,6 +10,7 @@
      width: 100%;
      height: auto;
      margin: 48px 0 0 0 ;
+     padding-bottom: 55px;
 }
 .component-div{
      /* border: 1px solid black; */
