--- a/src/components/Template.css
+++ b/src/components/Template.css
@@ -20,20 +20,20 @@
 }
 .LeftDiv{
      color: #7e889a;
-     width: 496px;
+     width: 400px;
      height: auto;
      margin: 0 0 0 43px;
 }
 .component{
+     /* border: 1px solid blue; */
      font-size: 23px;
      line-height: 31.5px;
-     margin-left: 43px;
      font-weight: 400;
-     margin: 0px 0px 7px;
 }
 .right-div{
      width: 100%;
      /* border: 1px solid red; */
+     margin-right: 100px;
 }
 .text{
      font-size: 37px;
@@ -53,28 +53,28 @@
      margin: 72px 0 0 0;
 }
 .pictures{
+     /* border: 1px solid green; */
      border-top: 1px solid grey;
-     width: 93%;
+     width: 100%;
      margin-top: 10px;
      display:  grid;
      grid-template-columns: repeat(4,1fr);
-     grid-gap: 20px;
      grid-gap: 1px;
 }
 .images-div{
      /* border: 1px solid red; */
      background-color: white;
-     height: 230px;
-     width: 319px;
+     height: 223px;
+     width: 300px;
      margin-top: 20px;
      cursor: pointer;
+     /* border: 1px solid green; */
 }
 .img-text{
      font-size: 18px;
      line-height: 24px;
      font-weight: 600;
      margin: 5px 0 0 15px;
-     
 }
 .flex-div{
      /* border: 1px solid green; */
@@ -88,6 +88,7 @@
      text-align: center;
 }
 .height{
-     height: 179px;
-     width: 320px;
+     /* border: 1px solid red; */
+     height: 170px;
+     width: 300px;
 }
