--- a/src/components/ypayment.css
+++ b/src/components/ypayment.css
@@ -1,136 +1,30 @@
-/* .ypayment {
-    display: flex;
-    margin: 1%;
-}
-
-.leftBox {
-    width: 50%;
-    margin-left: 0px;
-    border: 1px solid red;
-}
-
-.leftBox img {
-    width: 7rem;
-    height: 3rem;
-    cursor: pointer;
-    color: white;
-    background-color: white;
-}
-
-
-.left1 {
-    display: flex;
-    border: 1px solid red;
-    margin: auto;
-}
-
-.per p {
-    color: gray;
-    margin-top: 0px;
-    margin-bottom: -1%;
-    margin-left: 25%;
-}
-
-.left2 {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid red;
-}
-
-.left2a p {
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.Billed {
-    color: gray;
-}
-
-.left2b {
-    margin-top: -0.3%;
-    margin-bottom: 0px;
-}
-
-.left3 {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid red;
-}
-
-.left4 {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid red;
-}
-
-.left5 {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid red;
-}
-
-.rightBox {
-    width: 50%;
-    margin-left: 0px;
-    border: 1px solid green;
-}
-
-.right1 {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid red;
-}
-
-.right2 {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid red;
-}
-
-.right3 {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid red;
-}
-
-.right4 {
-    margin: auto;
-    border: 1px solid red;
-}
-
-.right4 p {
-    margin: auto;
-}
-
-.EnterAdd {
-    text-decoration: underline;
-} */
-
-
-
-
-*{
+* {
     box-sizing: border-box;
 }
 
 #container {
     display: flex;
-    width: 100%;
+    width: 80%;
+    margin: auto;
+    margin-top: 1%;
 }
 
 #container>div {
     height: auto;
-    width: 40%;
+    width: 45%;
+    /* border: 1px solid red; */
 }
 
 #leftDiv {
     margin-left: auto;
     margin-right: auto;
+    /* border: 1px solid red; */
 }
 
 #leftDiv>div {
     display: flex;
     justify-content: space-between;
+    /* border: 1px solid red; */
 }
 
 hr {
@@ -140,6 +34,7 @@ hr {
 #lightText {
     display: flex;
     flex-direction: column;
+    /* border: 1px solid red; */
 }
 
 #lightText {
@@ -151,29 +46,20 @@ hr {
     font-size: 40px;
 }
 
-
-#subscribe {
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    background-color: rgb(88, 70, 246);
-    color: white;
-    font-size: 17px;
-    cursor: pointer;
+h3 {
+    color: rgb(83, 82, 82);
+    /* border: 1px solid red; */
 }
 
 .container2 {
-
-    height: 600px;
+    width: 100%;
     padding-left: 10%;
-    width: 40%;
-
     box-sizing: border-box;
     border-left: 1px solid rgba(150, 141, 141, 0.397);
 }
 
 #card {
-    width: 98.5%;
+    width: 100%;
     height: 25px;
     border-radius: 5px 5px 0 0;
     background-size: 30px;
@@ -189,16 +75,51 @@ hr {
 
 input,
 select {
-    width: 98%;
+    width: 100%;
     height: 25px;
     border-radius: 5px;
     border: 1px solid grey;
 }
 
 #mmyycvc {
-    width: 48%;
+    width: 50%;
     border-radius: 0 0 5px 5px;
     border-top: 0;
+}
+
+.name {
+    margin: auto;
+    /* border: 1px solid red; */
+}
+
+.EnterAdd {
+    text-decoration: underline;
+}
+
+.right3 {
+    display: flex;
+    border: 1px solid grey;
+    border-radius: 10px;
+}
+
+.right31 {
+    /* border: 1px solid red; */
+    width: 7%;
+    margin-right: 7%;
+    margin-top: 3%;
+
+}
+
+.right32>p {
+    /* border: 1px solid red; */
+    margin: auto;
+
+}
+
+.right32 .right321 {
+    /* border: 1px solid red; */
+    margin: auto;
+    color: gray;
 }
 
 #subscribe {
@@ -210,8 +131,9 @@ select {
     font-size: 17px;
 }
 
-h2 {
+h4 {
     margin-bottom: 3px;
+    color: gray;
 }
 
 .confirm {
@@ -225,7 +147,7 @@ img {
 }
 
 
-@media all and (min-width:80px) and (max-width:650px) {
+@media screen and (min-width:80px) and (max-width:650px) {
     #container {
         box-sizing: border-box;
         display: flex;
