--- a/src/components/Template.css
+++ b/src/components/Template.css
@@ -2,7 +2,7 @@
      /* border: 1px solid black; */
      margin: 0px;
      padding: 0px;
-     /* font-family: Poppins, sans-serif; */
+     font-family: Poppins, sans-serif;
 }
 .bgcolor{
      /* border: 1px solid green; */
