--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,26 +1,87 @@
 .container {
     width: 90%;
     margin: auto;
-    text-align: center;
 }
 
 .section1 {
-    border: 1px solid red;
     display: flex;
+    padding-left: 17%;
+    margin-bottom: 115px;
 }
 
-.section1 > div {
-    border: 1px solid black;
-    width: 50%;
+.sec1-p1 {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.signupbtn {
+    background-color: blue;
+    color: white;
+    border: 0;
+    padding: 20px;
+    border-radius: 50px;
+}
+
+.sec1-1 {
+    width: 40%;
+}
+
+.sec1-p2 {
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+
+.img1 {
+    width: 75%;
+    margin-top: 40px;
+    margin-left: 30px;
 }
 
 .section2 {
-    border: 1px solid black;
+    margin-bottom: 85px;
+}
+
+.sec2-1 {
+    font-size: 23px;
+    margin-bottom: 20px;
 }
 
 .sec2-d2 {
     display: flex;
+    width: 80%;
+    margin: auto;
     justify-content: space-around
+}
+
+.section3 {
+    margin-bottom: 150px;
+}
+
+/* .file-icon {
+    width: 100%;
+    color: white;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    
+} */
+
+.file-i {
+    background-color: blue;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+}
+
+.sec3-1 {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.sec3-2 {
+    font-size: 23px;
+    margin-bottom: 33px;
 }
 
 video:hover {
@@ -43,8 +104,8 @@ video:hover {
 .sec3-vs {
     display: grid;
     grid-template-columns: repeat(3, auto);
-    grid-gap: 20px;
-    border: 1px solid black;
+    grid-row-gap: 45px;
+    grid-column-gap: 30px;
     width: 80%;
     margin: auto;
 }
@@ -87,19 +148,9 @@ video:hover {
     display: flex;
 }
 
-.file-icon {
-    color: white;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    
-}
 
-.file-i {
-    background-color: blue;
-    border-radius: 50px;
-    width: 20px;
-}
+
+
 
 .m-auto {
     margin: auto;
