--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,4 @@
-.container {
+.containerlanding {
     width: 90%;
     margin: auto;
 }
@@ -38,7 +38,7 @@
 }
 
 .section2 {
-    margin-bottom: 85px;
+    margin-bottom: 95px;
 }
 
 .sec2-1 {
@@ -54,23 +54,80 @@
 }
 
 .section3 {
-    margin-bottom: 150px;
+    margin-bottom: 215px;
 }
 
-/* .file-icon {
-    width: 100%;
-    color: white;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    
-} */
+.sec4-2 {
+    padding-left: 123px;
+}
 
 .file-i {
-    background-color: blue;
+    background-color: rgb(107, 11, 242);
     border-radius: 50px;
-    width: 50px;
-    height: 50px;
+    width: 63px;
+    height: 63px;
+    margin-bottom: 20px;
+}
+
+.file-icon {
+    color: white;
+    padding-left: 27px;
+    padding-top: 22px;
+}
+
+.sec4-2-2 {
+    font-size: 40px;
+    font-weight: 550;
+    margin-bottom: 40px;
+}
+
+.sec4-2-3 {
+    margin-bottom: 90px;
+}
+
+.nav-links {
+    text-decoration: none;
+    color: blue;
+}
+
+.sec4-2-4 {
+    margin-bottom: 40px;
+}
+
+.sec4-2-5 {
+    margin-bottom: 50px;
+}
+
+.hline {
+    margin-bottom: 50px;
+    width: 50%; 
+    margin-left: 0;
+}
+
+.sec4-img1 {
+    border-radius: 50%;
+    width: 53px;
+    height: 53px;
+    margin-top: 2px;
+}
+
+.s4-lh-ld {
+    margin-left: 18px;
+}
+
+.sec4-nc {
+    font-weight: bold;
+    color: rgb(192, 33, 33);
+    font-size: 30px;
+}
+
+.sec4-un {
+    font-size: 30px;
+    color: rgb(192, 33, 33);
+}
+
+.section4 {
+    margin-bottom: 215px;
 }
 
 .sec3-1 {
@@ -81,7 +138,7 @@
 
 .sec3-2 {
     font-size: 23px;
-    margin-bottom: 33px;
+    margin-bottom: 40px;
 }
 
 video:hover {
@@ -121,7 +178,17 @@ video:hover {
 
 .section4 {
     display: flex;
-    border: 1px solid black;
+}
+
+.imgdiv {
+    width: 100%;
+}
+
+.sec4-img {
+    width: 75%;
+    margin-right: 0px;
+    margin-left: 180px;
+    margin-top: 200px;
 }
 
 .border {
@@ -130,6 +197,11 @@ video:hover {
 
 .section4 > div {
     width: 50%;
+}
+
+.sec5-1 {
+    margin-left: 100px;
+    margin-right: 0;
 }
 
 .width30 {
