--- a/src/components/NavbarLandingpage.css
+++ b/src/components/NavbarLandingpage.css
@@ -1,4 +1,4 @@
-.navbar {
+.navbarLanding {
     z-index: 100;
     display: flex;
     height: 100px;
@@ -7,8 +7,7 @@
     top: 0;
     left: 0;
     background-color: white;
-transition: 0.4s;
-    
+    transition: 0.4s;
 }
 
 .nav-icon {
@@ -28,7 +27,7 @@ transition: 0.4s;
 }
 
 .nav-items > div {
-    padding-right: 45px;
+    padding-right: 20px;
 }
 
 .basic-button {
