--- a/src/components/ReactModal.css
+++ b/src/components/ReactModal.css
@@ -1,10 +1,11 @@
 .display-div{
-     /* border: 1px solid red; */
+     border: 1px solid red;
      width: 598px;
      height: 530px;
      margin: auto;
-     margin-top: 210px;
-     margin-bottom: 210px;
+     /* margin-top: 210px; */
+     margin-top: 8%;
+     /* margin-bottom: 210px; */
      background-color: white;
      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
      border-radius: 15px;
