--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -200,8 +200,60 @@ video:hover {
 }
 
 .sec5-1 {
-    margin-left: 100px;
+    margin-left: 270px;
     margin-right: 0;
+    padding-right: 0;
+}
+
+.sec5-1-3 {
+    margin-bottom: 40px;
+}
+
+.sec5-1-4 {
+    margin-bottom: 50px;
+}
+
+.sec5-1-5 {
+    margin-bottom: 40px;
+}
+
+.sec5-1-6-2 {
+    font-size: 17px;
+}
+
+.sec5-img {
+    width: 130%;
+    margin-top: 260px;
+    margin-left: 0;
+}
+
+.width2 {
+    width: 35%;
+}
+
+.section5 {
+    margin-bottom: 260px;
+    display: flex;
+}
+
+.section5 > div {
+    width: 33%;
+}
+
+.section6 {
+    display: flex;
+}
+
+.sec6-2-3 {
+    margin-bottom: 40px;
+}
+
+.sec6-mb {
+    margin-bottom: 8px;
+}
+
+.sec7-1 {
+    font-size: 40px;
 }
 
 .width30 {
@@ -220,7 +272,23 @@ video:hover {
     display: flex;
 }
 
+.section7 {
+    margin-bottom: 210px;
+}
 
+.section8 {
+    text-align: center;
+}
+
+.sec8-1 {
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.sec8-2 {
+    font-size: 24px;
+    margin-bottom: 60px;
+}
 
 
 
@@ -230,22 +298,29 @@ video:hover {
 
 .sec8-btns {
     justify-content: space-around;
-    ;
+    width: 85%;
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 .sec8-btns > button {
     background-color: white;
-    border: 0px;
+    border: 1px;
     color: blue;
     padding: 10px;
     border-radius: 20px;
     border: 0.5px solid blue;
+    margin-right: 20px;
 }
 
 .sec8-btns > button:hover {
     background-color: blue;
     color: white;
     padding: 10px;
+    border-radius: 20px;
+}
+
+.slide-comp {
     border-radius: 20px;
 }
 
@@ -257,7 +332,9 @@ video:hover {
 
 .slide-container {
     border: 1px solid black;
-    width: auto;
+    width: 65%;
+    margin: auto;
+    border-radius: 20px;
 }
 
 .each-slide {
