--- a/src/components/CreatePage.css
+++ b/src/components/CreatePage.css
@@ -1,7 +1,7 @@
-.App {
+/* .App {
     font-family: sans-serif;
     text-align: center;
-  }
+  } */
   .create-navbar{
     width: 100%;
     height: 40px;
