--- a/src/components/ReactModal.css
+++ b/src/components/ReactModal.css
@@ -1,5 +1,5 @@
 .display-div{
-     border: 1px solid red;
+     /* border: 1px solid red; */
      width: 598px;
      height: 530px;
      margin: auto;
