--- a/src/components/NavbarLandingpage.css
+++ b/src/components/NavbarLandingpage.css
@@ -19,14 +19,14 @@
     width: fit-content;
 }
 
-.nav-items {
+.landing-nav-items {
     display: flex;
     width: 100%;
     justify-content: flex-end;
     align-items: center;
 }
 
-.nav-items > div {
+.landing-nav-items > div {
     padding-right: 20px;
 }
 
@@ -60,6 +60,11 @@
     padding: 20px;
     border-radius: 50px;
     background-color: white;
+}
+
+.signinbtn:hover{
+    background-color: blue;
+    color: white;
 }
 
 .sulink {
