--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -277,17 +277,23 @@ video:hover {
 }
 
 .section8 {
-    text-align: center;
+    margin-bottom: 200px;
 }
 
 .sec8-1 {
+    text-align: center;
     font-size: 40px;
     margin-bottom: 20px;
 }
 
 .sec8-2 {
+    text-align: center;
     font-size: 24px;
     margin-bottom: 60px;
+}
+
+.borderlite {
+    border: 1px solid lightgray;
 }
 
 
@@ -320,28 +326,32 @@ video:hover {
     border-radius: 20px;
 }
 
+.slide-container {
+    /* border: 1px solid black; */
+    width: 65%;
+    margin: auto;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+
 .slide-comp {
     border-radius: 20px;
+}
+
+.each-slide {
+    /* border: 1px solid red; */
+    width: auto;
+    background-size: auto;
+    border-radius: 20px;
+    height: 420px;
+    
 }
 
 .slide-img {
     background-repeat: no-repeat;
     width: 100%;
     height: 560px;
-}
-
-.slide-container {
-    border: 1px solid black;
-    width: 65%;
-    margin: auto;
-    border-radius: 20px;
-}
-
-.each-slide {
-    border: 1px solid red;
-    width: auto;
-    background-size: auto;
-    
+    border-radius: 10px;
 }
 
 .slide-img > img {
@@ -365,12 +375,74 @@ video:hover {
     width: 300px;
 }
 
+.slide-caption {
+    background-color: white;
+}
+
+.sec8-2 {
+    /* border: 1px solid black; */
+    width: 70%;
+    margin: auto;
+    margin-bottom: 60px;
+}
+
+.sec8-2 > img {
+    width: 13%;
+}
+
+.box-c {
+    background-color: white;
+    /* border: 1px solid red; */
+    width: 46%;
+    justify-content: flex-end;
+    position: relative;
+    top: 15px;
+    left: 460px;
+    border-radius: 10px;
+    height: 350px;
+    padding: 30px;
+}
+
+.p-3 {
+    margin-top: 0;
+    padding-top: 0;
+}
+
+.p-2 {
+    color: black;
+}
+
+.p-2, .p-3 {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.lastp {
+    margin-bottom: 20px;
+    justify-content: flex-end;
+    text-align: end;
+}
+
+.nav-linkss {
+    text-decoration: none;
+    color: rgb(127, 121, 121);
+}
+
+.nav-linkss:hover {
+    text-decoration: underline;
+}
+
+.sec8-2-1 {
+    width: 200px;
+}
+
 .cards {
     justify-content: space-around;
 }
 
 .innercard {
     justify-content: space-around;
+    height: 400px;
 }
 
 .w-30 {
@@ -388,10 +460,24 @@ video:hover {
 
 .text-l {
     text-align: left;
+    font-size: 23px;
+}
+
+.mb1 {
+    margin-bottom: 50px;
+}
+
+.mb2 {
+    margin-bottom: 20px;
+}
+
+.mb3 {
+    margin-bottom: 50px;
 }
 
 .text-r {
     text-align: right;
+    padding-right: 20px;
 }
 
 .link {
@@ -413,10 +499,49 @@ video:hover {
     margin-bottom: 45px;
 }
 
+.section9 {
+    margin-bottom: 120px;
+}
+
 .section10 {
     width: 80%;
     margin: auto;
     border-radius: 20px;
     background-color: blue;
     color: white;
+    text-align: center;
+    margin-bottom: 100px;
+    padding-top: 10px;
+}
+
+.sec10-1 {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 35px;
+}
+
+.sec10-0 {
+    margin-bottom: 60px;
+}
+
+.sec10-2 {
+    font-size: 25px;
+    margin-bottom: 30px;
+}
+
+.lastbtn {
+    padding: 18px;
+    border-radius: 25px;
+    border: 0;
+    margin-bottom: 60px;
+}
+
+.lastbtn:hover {
+    cursor: pointer;
+    background-color: lightgray;
+}
+
+.section11 {
+    margin-left: -80px;
+    margin-right: -80px;
 }
