--- a/src/components/pri.css
+++ b/src/components/pri.css
@@ -5,6 +5,10 @@
   justify-content: center;
   margin-left: 200px;
 }
+
+.pricing3 {
+  text-align: center;
+}
 .Box1 {
   width: 30%;
   text-align: start;
