--- a/src/components/Publish.css
+++ b/src/components/Publish.css
@@ -18,6 +18,12 @@
     
 }
 
+.div2 > img {
+    width: 90%;
+    margin: auto;
+    padding: 20px 25px 0px 35px ;
+}
+
 
 
 .publish-nav-lefthalf {
@@ -119,8 +125,15 @@
     border: 0;
 }
 
+.upgrade-btn2:hover {
+    background-color: white;
+    color: blue;
+    cursor: pointer;
+}
+
 .div2 {
     height: 395px;
+    /* border: 1px solid black; */
 }
 
 .div3 {
@@ -179,4 +192,22 @@
 .div5 {
     padding: 20px;
     display: flex;
+}
+
+.right-body {
+    padding: 20px;
+}
+
+.inputtag {
+    margin-bottom: 20px;
+    padding: 10px;
+    width: 95%;
+}
+
+.p-btn {
+    margin-left: 125px;
+}
+
+.ugbtn2:hover {
+    border: 1px solid blue;
 }
