--- a/src/components/NavbarLandingpage.css
+++ b/src/components/NavbarLandingpage.css
@@ -2,7 +2,7 @@
     z-index: 100;
     display: flex;
     height: 100px;
-    margin:auto;
+    margin: auto;
     position: sticky;
     top: 0;
     left: 0;
@@ -26,7 +26,7 @@
     align-items: center;
 }
 
-.landing-nav-items > div {
+.landing-nav-items>div {
     padding-right: 20px;
 }
 
@@ -35,7 +35,7 @@
     color: black;
 }
 
-.basic-button:hover{
+.basic-button:hover {
     background-color: none;
 }
 
@@ -47,30 +47,64 @@
     background-color: white;
 }
 
-.signupbtn {
-    border: 0;
+.sulink {
+    text-decoration: none;
+    color: blue;
+
+}
+
+.sulink:hover {
+    cursor: pointer;
     background-color: blue;
     color: white;
+
+}
+
+.signupbtn {
+    border: 1px solid blue;
     padding: 20px;
     border-radius: 50px;
+    background-color: white;
+    color: blue;
 }
+
+.signupbtn:hover {
+    cursor: pointer;
+    background-color: blue;
+    color: white;
+}
+
+
 
 .signinbtn {
     border: 1px solid blue;
     padding: 20px;
     border-radius: 50px;
     background-color: white;
+    color: blue;
 }
 
-.signinbtn:hover{
+.signinbtn:hover {
+    cursor: pointer;
     background-color: blue;
     color: white;
 }
 
-.sulink {
-    color: white;
+
+.silink {
     text-decoration: none;
+    color: blue;
 }
+
+
+
+.silink :hover {
+    cursor: pointer;
+    background-color: blue;
+    color: white;
+}
+
+
 
 .home {
     text-decoration: none;
@@ -122,28 +156,12 @@
     padding-top: 5px;
 }
 
-.silink {
-    text-decoration: none;
-    color: blue;
-}
 
-.signinbtn:hover{
-    cursor: pointer;
-}
-
-.signupbtn:hover{
-    cursor: pointer;
-}
 
 .dropdwn {
     border: 0;
 }
 
-.dropdwn > option {
+.dropdwn>option {
     border: 0;
 }
-
-
-
-
-
