--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,8 @@
 .containerlanding {
-    width: 90%;
-    margin: auto;
+    /* width: 90%; */
+    /* margin: auto; */
+
+    /* border: 5px solid black; */
 }
 
 .section1 {
@@ -41,6 +43,11 @@
     margin-bottom: 95px;
 }
 
+.brandImgClass {
+    width: 9%;
+    height: 100px;
+}
+
 .sec2-1 {
     font-size: 23px;
     margin-bottom: 20px;
@@ -48,7 +55,7 @@
 
 .sec2-d2 {
     display: flex;
-    width: 80%;
+    width: 100%;
     margin: auto;
     justify-content: space-around
 }
@@ -541,8 +548,8 @@ video:hover {
     background-color: lightgray;
 }
 
-.section11 {
+/* .section11 {
     margin-left: -80px;
     margin-right: -80px;
-}
+} */
 
