--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,23 +1,25 @@
 .footer {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: #24282F;
     color: white;
-    width: 100%;
+    /* width: 100%;  */
     display: flex;
+    padding-bottom: 120px;
 }
 
 .left-footer {
-    width: 40%;
+    width: 30%;
     /* border: 1px solid white; */
     padding: 50px 0px 0px 120px
     
 }
 
 .right-footer {
-    width: 50%;
+    width: 60%;
     /* border: 1px solid white; */
-    padding: 50px 0px 130px 0px;
-    margin-left: 120px;
+    padding: 50px 0px 0px 0px;
+    /* margin-left: 120px; */
+    font-size: 13px;
 }
 
 .footer-img {
@@ -35,24 +37,29 @@
     display: flex;
 }
 
-.col1>div {
-    padding-bottom: 20px;
+.second-eles > a {
+    /* padding-bottom: 20px; */
+    margin-bottom: 15px;
+    color: lightgray;
+    display: grid;
+    grid-template-columns: repeat(1);
+    text-decoration: none;
 }
 
-.col2>div {
+/* .col2>div {
     padding-bottom: 20px;
     padding-left: 80px;
-}
+} */
 
-.col3>div {
+/* .col3>div {
     padding-bottom: 20px;
     padding-left: 80px;
-}
+} */
 
 .first-ele {
-    margin-bottom: 30px;
+    margin-bottom: 35px;
 }
 
 .col2, .col3 {
-    margin-left: 20px;
+    margin-left: 100px;
 }
