--- a/src/components/NavbarLandingpage.css
+++ b/src/components/NavbarLandingpage.css
@@ -1,7 +1,7 @@
 .navbarLanding {
     z-index: 100;
     display: flex;
-    height: 100px;
+    /* height: 100px; */
     margin: auto;
     position: sticky;
     top: 0;
@@ -10,14 +10,8 @@
     transition: 0.4s;
     /* border: 1px solid black; */
 }
-
-.nav-icon {
-    width: 20%;
-}
-
-.lumen-icon {
-    height: 100%;
-    width: fit-content;
+.nav-l-icon {
+    margin-left: 100px;
 }
 
 .landing-nav-items {
@@ -25,6 +19,7 @@
     width: 100%;
     justify-content: flex-end;
     align-items: center;
+    margin-right: 100px ;
 }
 
 .landing-nav-items>div {
@@ -53,7 +48,7 @@
     color: blue;
     border: 1px solid ;
     border-radius: 25px;
-    padding: 10px;
+    padding: 8px 10px 12px 10px;
 
 }
 
@@ -63,7 +58,7 @@
     border: 1px solid ;
     border-radius: 25px;
     background-color: rgb(73, 73, 215);
-    padding: 10px;
+    padding: 8px 10px 12px 10px;    
 
 }
 
@@ -80,20 +75,6 @@
     color: white;
 
 }
-
-/* .signupbtn {
-    border: 1px solid blue;
-    padding: 20px;
-    border-radius: 50px;
-    background-color: white;
-    color: blue;
-}
-
-.signupbtn:hover {
-    cursor: pointer;
-    background-color: blue;
-    color: white;
-} */
 
 
 
@@ -133,6 +114,7 @@
 
 .create {
     text-decoration: none;
+    color: rgb(59, 10, 10);
 }
 
 .create:hover {
@@ -150,6 +132,7 @@
 
 .enterprise {
     text-decoration: none;
+    color: rgb(59, 10, 10);
 }
 
 .enterprise:hover {
@@ -158,6 +141,7 @@
 
 .casestudy {
     text-decoration: none;
+    color: rgb(59, 10, 10);
 }
 
 .casestudy:hover {
@@ -186,4 +170,9 @@
 
 .dropdwn>option {
     border: 0;
+}
+
+.subtn {
+    text-align: center;
+    vertical-align: middle;
 }
