--- a/src/components/NavbarLandingpage.css
+++ b/src/components/NavbarLandingpage.css
@@ -14,6 +14,11 @@
     margin-left: 100px;
 }
 
+.lumen-l-icon {
+    /* border: 1px solid red; */
+    transition: 0.4s;
+}
+
 .landing-nav-items {
     display: flex;
     width: 100%;
